--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,12 @@ footer p {
   margin-bottom: 20px;
 }
 
+.redes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 footer i {
   font-size: 32px;
   margin-bottom: 19px;
